--- a/ultralytics/cfg/models/v8/test5.yaml
+++ b/ultralytics/cfg/models/v8/test5.yaml
@@ -22,8 +22,8 @@ backbone:
   - [-1, 1, torchvision.ops.Permute, [[0, 3, 1, 2]]] #7 (1, 768, 20, 20) (256)
   # - [-1, 1, EMA, [768]] #8 multiscale 3
   - [-1, 1, EMA, [192]] #8 multiscale 3
-  - [5, 1, EMA, [192]] #8 multiscale 3
-  - [3, 1, EMA, [192]] #8 multiscale 3
+  - [5, 1, EMA, [384]] #8 multiscale 3
+  - [3, 1, EMA, [768]] #8 multiscale 3
   # CNN
   - [0, 1, DWConv, [64, 3, 2]] # (1, 64, 320, 320) 9 (24)
   - [-1, 1, DWConv, [128, 3, 2]] # (1, 128, 160, 160) 10 (48)
@@ -39,18 +39,18 @@ backbone:
   # #Concat
   # - [3, 1, DWConv, [128, 1, 1]] #19 (1, 192, 80, 80) -> (1, 128, 80, 80)
   # - [13, 1, DWConv, [128, 1, 1]] #20 (1, 256, 80, 80) -> (1, 128, 80, 80)
-  - [[3, 13], 1, Concat, [1]] # 21 (1, 256, 80, 80)
-  - [-1, 1, EMA, [192]] #8 multiscale 3
+  - [[3, 13], 1, Concat, [1]] # 21 (1, 256, 80, 80) 448
+  - [-1, 1, EMA, [448]] #8 multiscale 3
 
   # - [5, 1, DWConv, [128, 1, 1]] #22 (1, 384, 40, 40) -> (1, 128, 40, 40)
   # - [15, 1, DWConv, [128, 1, 1]] # 23 (1, 512, 40, 40) -> (1, 128, 40, 40)
-  - [[5, 15], 1, Concat, [1]] # 24 (1, 256, 40, 40)
-  - [-1, 1, EMA, [192]] #8 multiscale 3
+  - [[5, 15], 1, Concat, [1]] # 24 (1, 256, 40, 40) 896
+  - [-1, 1, EMA, [896]] #8 multiscale 3
 
   # - [8, 1, DWConv, [256, 1, 1]] #25 (1, 768, 20, 20) -> (1, 256, 20, 20)
   # - [18, 1, DWConv, [256, 1, 1]] #26 (1, 1024, 20, 20) -> (1, 256, 20, 20)
-  - [[8, 18], 1, Concat, [1]] #27 (1, 512, 20, 20)
-  - [-1, 1, EMA, [192]] #8 multiscale 3
+  - [[8, 18], 1, Concat, [1]] #27 (1, 512, 20, 20) 1792
+  - [-1, 1, EMA, [1792]] #8 multiscale 3
 
 # YOLOv8.0n head
 head:
