--- a/ultralytics/cfg/models/v8/test5.yaml
+++ b/ultralytics/cfg/models/v8/test5.yaml
@@ -2,7 +2,7 @@ nc: 2
 scales: # model compound scaling constants, i.e. 'model=yolov8n.yaml' will call yolov8.yaml with scale 'n'
   # l: [1.00, 1.00, 1024] # YOLOv8l summary: 365 layers, 43691520 parameters, 43691504 gradients, 165.7 GFLOPs
   # n: [0.33, 0.25, 1024] # YOLOv8n summary: 225 layers,  3157200 parameters,  3157184 gradients,   8.9 GFLOPs
-  s: [0.33, 0.25, 1024] # YOLOv8s summary: 225 layers, 11166560 parameters, 11166544 gradients,  28.8 GFLOPs
+  s: [0.33, 0.5, 1024] # YOLOv8s summary: 225 layers, 11166560 parameters, 11166544 gradients,  28.8 GFLOPs
   # m: [0.67, 0.75, 768] # YOLOv8m summary: 295 layers, 25902640 parameters, 25902624 gradients,  79.3 GFLOPs
   # l: [1.00, 1.00, 512] # YOLOv8l summary: 365 layers, 43691520 parameters, 43691504 gradients, 165.7 GFLOPs
   # x: [1.00, 1.25, 512] # YOLOv8x summary: 365 layers, 68229648 parameters, 68229632 gradients, 258.5 GFLOPs
@@ -21,36 +21,36 @@ backbone:
   - [1, 1, Index, [768, 9]] #6 
   - [-1, 1, torchvision.ops.Permute, [[0, 3, 1, 2]]] #7 (1, 768, 20, 20) (256)
   # - [-1, 1, EMA, [768]] #8 multiscale 3
-  - [-1, 1, EMA, [48]] #8 multiscale 3
-  - [5, 1, EMA, [96]] #8 multiscale 3
-  - [3, 1, EMA, [192]] #8 multiscale 3
+  # - [-1, 1, EMA, [48]] #8 multiscale 3
+  # - [5, 1, EMA, [96]] #8 multiscale 3
+  # - [3, 1, EMA, [192]] #8 multiscale 3
   # CNN
-  - [0, 1, DWConv, [64, 3, 2]] # (1, 64, 320, 320) 9 (24)
-  - [-1, 1, DWConv, [128, 3, 2]] # (1, 128, 160, 160) 10 (48)
-  - [-1, 3, DWC3k2, [128, True]] # (1, 128, 160, 160) 11 (48))
-  - [-1, 1, DWConv, [256, 3, 2]] # (1, 256, 80, 80) 12 (88))
-  - [-1, 6, DWC3k2, [256, True]] # (1, 256, 80, 80) 13 multiscale 1 (88)
-  - [-1, 1, DWConv, [512, 3, 2]] # (1, 512, 40, 40) 14 (168)
-  - [-1, 6, DWC3k2, [512, True]] # (1, 512, 40, 40) 15 multiscale 2 (168)
-  - [-1, 1, DWConv, [1024, 3, 2]] # (1, 1024, 20, 20) 16 (344)
-  - [-1, 3, DWC3k2, [1024, True]] # (1, 1024, 20, 20) 17 (344)
-  - [-1, 1, EMA, [256]] #(1, 1024, 20, 20) 18 multiscale 3 (344)
+  - [0, 1, DWConv, [64, 3, 2]] # (1, 64, 320, 320) 8 (24)
+  - [-1, 1, DWConv, [128, 3, 2]] # (1, 128, 160, 160) 9 (48)
+  - [-1, 3, DWC3k2, [128, True]] # (1, 128, 160, 160) 10 (48))
+  - [-1, 1, DWConv, [256, 3, 2]] # (1, 256, 80, 80) 11 (88))
+  - [-1, 6, DWC3k2, [256, True]] # (1, 256, 80, 80) 12 multiscale 1 (88)
+  - [-1, 1, DWConv, [512, 3, 2]] # (1, 512, 40, 40) 13 (168)
+  - [-1, 6, DWC3k2, [512, True]] # (1, 512, 40, 40) 14 multiscale 2 (168)
+  - [-1, 1, DWConv, [1024, 3, 2]] # (1, 1024, 20, 20) 15 (344)
+  - [-1, 3, DWC3k2, [1024, True]] # (1, 1024, 20, 20) 16 (344)
+  # - [-1, 1, EMA, [256]] #(1, 1024, 20, 20) 18 multiscale 3 (344)
 
   # #Concat
   # - [3, 1, DWConv, [128, 1, 1]] #19 (1, 192, 80, 80) -> (1, 128, 80, 80)
   # - [13, 1, DWConv, [128, 1, 1]] #20 (1, 256, 80, 80) -> (1, 128, 80, 80)
-  - [[3, 13], 1, Concat, [1]] # 21 (1, 256, 80, 80) 448
-  - [-1, 1, EMA, [224]] #8 multiscale 3
+  - [[3, 12], 1, Concat, [1]] # 21 (1, 256, 80, 80) 448
+  # - [-1, 1, EMA, [224]] #8 multiscale 3
 
   # - [5, 1, DWConv, [128, 1, 1]] #22 (1, 384, 40, 40) -> (1, 128, 40, 40)
   # - [15, 1, DWConv, [128, 1, 1]] # 23 (1, 512, 40, 40) -> (1, 128, 40, 40)
-  - [[5, 15], 1, Concat, [1]] # 24 (1, 256, 40, 40) 896
-  - [-1, 1, EMA, [448]] #8 multiscale 3
+  - [[5, 14], 1, Concat, [1]] # 24 (1, 256, 40, 40) 896
+  # - [-1, 1, EMA, [448]] #8 multiscale 3
 
   # - [8, 1, DWConv, [256, 1, 1]] #25 (1, 768, 20, 20) -> (1, 256, 20, 20)
   # - [18, 1, DWConv, [256, 1, 1]] #26 (1, 1024, 20, 20) -> (1, 256, 20, 20)
-  - [[8, 18], 1, Concat, [1]] #27 (1, 512, 20, 20) 1792
-  - [-1, 1, EMA, [304]] #8 multiscale 3
+  - [[7, 16], 1, Concat, [1]] #27 (1, 512, 20, 20) 1792
+  # - [-1, 1, EMA, [304]] #8 multiscale 3
 
 # YOLOv8.0n head
 head:
