--- a/ultralytics/cfg/models/v8/test5.yaml
+++ b/ultralytics/cfg/models/v8/test5.yaml
@@ -25,31 +25,34 @@ backbone:
   # - [5, 1, EMA, [96]] #8 multiscale 3
   # - [3, 1, EMA, [192]] #8 multiscale 3
   # CNN
-  - [0, 1, DWConv, [64, 3, 2]] # (1, 64, 320, 320) 8 (24)
-  - [-1, 1, DWConv, [128, 3, 2]] # (1, 128, 160, 160) 9 (48)
-  - [-1, 3, DWC3k2, [128, True]] # (1, 128, 160, 160) 10 (48))
-  - [-1, 1, DWConv, [256, 3, 2]] # (1, 256, 80, 80) 11 (88))
-  - [-1, 6, DWC3k2, [256, True]] # (1, 256, 80, 80) 12 multiscale 1 (88)
-  - [-1, 1, DWConv, [512, 3, 2]] # (1, 512, 40, 40) 13 (168)
-  - [-1, 6, DWC3k2, [512, True]] # (1, 512, 40, 40) 14 multiscale 2 (168)
-  - [-1, 1, DWConv, [1024, 3, 2]] # (1, 1024, 20, 20) 15 (344)
-  - [-1, 3, DWC3k2, [1024, True]] # (1, 1024, 20, 20) 16 (344)
+  - [0, 1, DWConv, [64, 3, 2]] # (1, 64, 320, 320) 8 (32)
+  - [-1, 1, DWConv, [128, 3, 2]] # (1, 128, 160, 160) 9 (64)
+  - [-1, 3, DWC3k2, [128, True]] # (1, 128, 160, 160) 10 (64))
+  - [-1, 1, DWConv, [256, 3, 2]] # (1, 256, 80, 80) 11 (128))
+  - [-1, 6, DWC3k2, [256, True]] # (1, 256, 80, 80) 12 multiscale 1 (128)
+  - [-1, 1, DWConv, [512, 3, 2]] # (1, 512, 40, 40) 13 (256)
+  - [-1, 6, DWC3k2, [512, True]] # (1, 512, 40, 40) 14 multiscale 2 (256)
+  - [-1, 1, DWConv, [1024, 3, 2]] # (1, 1024, 20, 20) 15 (512)
+  - [-1, 3, DWC3k2, [1024, True]] # (1, 1024, 20, 20) 16 (512)
   # - [-1, 1, EMA, [256]] #(1, 1024, 20, 20) 18 multiscale 3 (344)
 
   # #Concat
   # - [3, 1, DWConv, [128, 1, 1]] #19 (1, 192, 80, 80) -> (1, 128, 80, 80)
   # - [13, 1, DWConv, [128, 1, 1]] #20 (1, 256, 80, 80) -> (1, 128, 80, 80)
   - [[3, 12], 1, Concat, [1]] # 21 (1, 256, 80, 80) 448
+  - [3, 1, DWConv, [192, 1, 1]]
   # - [-1, 1, EMA, [224]] #8 multiscale 3
 
   # - [5, 1, DWConv, [128, 1, 1]] #22 (1, 384, 40, 40) -> (1, 128, 40, 40)
   # - [15, 1, DWConv, [128, 1, 1]] # 23 (1, 512, 40, 40) -> (1, 128, 40, 40)
   - [[5, 14], 1, Concat, [1]] # 24 (1, 256, 40, 40) 896
+  - [5, 1, DWConv, [384, 1, 1]]
   # - [-1, 1, EMA, [448]] #8 multiscale 3
 
   # - [8, 1, DWConv, [256, 1, 1]] #25 (1, 768, 20, 20) -> (1, 256, 20, 20)
   # - [18, 1, DWConv, [256, 1, 1]] #26 (1, 1024, 20, 20) -> (1, 256, 20, 20)
   - [[7, 16], 1, Concat, [1]] #27 (1, 512, 20, 20) 1792
+  - [16, 1, DWConv, [768, 1, 1]]
   # - [-1, 1, EMA, [304]] #8 multiscale 3
 
 # YOLOv8.0n head
