--- a/ultralytics/cfg/models/v8/test5.yaml
+++ b/ultralytics/cfg/models/v8/test5.yaml
@@ -15,7 +15,7 @@ backbone:
   # Swin track
   - [0, 1, TorchVision, [768, swin_t, DEFAULT, True, 4, True]] #1
   - [-1, 1, Index, [192 ,4]] #2
-  - [-1, 1, torchvision.ops.Permute, [[0, 3, 1, 2]]] #3 (1, 192, 80, 80) multiscale 1 (96)
+  - [-1, 1, torchvision.ops.Permute, [[0, 3, 1, 2]]] #3 (1, 192, 80, 80) multiscale 1 (96) 
   - [1, 1, Index, [384, 6]] #4
   - [-1, 1, torchvision.ops.Permute, [[0, 3, 1, 2]]] #5 (1, 384, 40, 40) multiscale 2 (192)
   - [1, 1, Index, [768, 9]] #6 
@@ -40,19 +40,19 @@ backbone:
   # - [3, 1, DWConv, [128, 1, 1]] #19 (1, 192, 80, 80) -> (1, 128, 80, 80)
   # - [13, 1, DWConv, [128, 1, 1]] #20 (1, 256, 80, 80) -> (1, 128, 80, 80)
   - [[3, 12], 1, Concat, [1]] # 21 (1, 256, 80, 80) 448 (224)
-  - [12, 1, DWConv, [256, 1, 1]]
+  - [-1, 1, DWConv, [224, 1, 1]]  #112
   # - [-1, 1, EMA, [224]] #8 multiscale 3
 
   # - [5, 1, DWConv, [128, 1, 1]] #22 (1, 384, 40, 40) -> (1, 128, 40, 40)
   # - [15, 1, DWConv, [128, 1, 1]] # 23 (1, 512, 40, 40) -> (1, 128, 40, 40)
   - [[5, 14], 1, Concat, [1]] # 24 (1, 256, 40, 40) (445)
-  - [6, 1, DWConv, [768, 1, 1]]
+  - [-1, 1, DWConv, [448, 1, 1]] #224
   # - [-1, 1, EMA, [448]] #8 multiscale 3
 
   # - [8, 1, DWConv, [256, 1, 1]] #25 (1, 768, 20, 20) -> (1, 256, 20, 20)
   # - [18, 1, DWConv, [256, 1, 1]] #26 (1, 1024, 20, 20) -> (1, 256, 20, 20)
   - [[7, 16], 1, Concat, [1]] #27 (1, 512, 20, 20) (896)
-  - [-1, 1, DWConv, [896, 1, 1]] 
+  - [-1, 1, DWConv, [896, 1, 1]]  #448
   # - [-1, 1, EMA, [304]] #8 multiscale 3
 
 # YOLOv8.0n head
