--- a/ultralytics/cfg/models/v8/test5.yaml
+++ b/ultralytics/cfg/models/v8/test5.yaml
@@ -62,16 +62,16 @@ head:
   - [[-1, 20], 1, Concat, [1]] # 24
   - [-1, 3, DWC3k2, [512]] # 25
 
-  - [-1, 1, nn.Upsample, [None, 2, "nearest"]] #26
-  - [[-1, 18], 1, Concat, [1]] # 27
-  - [-1, 3, DWC3k2, [256]] # 28
+  # - [-1, 1, nn.Upsample, [None, 2, "nearest"]] #26
+  # - [[-1, 18], 1, Concat, [1]] # 27
+  # - [-1, 3, DWC3k2, [256]] # 28
 
-  - [-1, 1, DepthwiseConvBlock, [256, 3, 2]] #29
-  - [[-1, 25], 1, Concat, [1]] # 30
-  - [-1, 3, DWC3k2, [512, True]] # 31
+  # - [-1, 1, DepthwiseConvBlock, [256, 3, 2]] #29
+  # - [[-1, 25], 1, Concat, [1]] # 30
+  # - [-1, 3, DWC3k2, [512, True]] # 31
 
-  - [-1, 1, DepthwiseConvBlock, [512, 3, 2]] #32
-  - [[-1, 22], 1, Concat, [1]] # 33
-  - [-1, 3, DWC3k2, [1024, True]] # 34
+  # - [-1, 1, DepthwiseConvBlock, [512, 3, 2]] #32
+  # - [[-1, 22], 1, Concat, [1]] # 33
+  # - [-1, 3, DWC3k2, [1024, True]] # 34
 
   - [[34, 31, 28], 1, Detect, [nc]] # 35
