--- a/ultralytics/cfg/models/v8/test5.yaml
+++ b/ultralytics/cfg/models/v8/test5.yaml
@@ -40,38 +40,38 @@ backbone:
   # - [3, 1, DWConv, [128, 1, 1]] #19 (1, 192, 80, 80) -> (1, 128, 80, 80)
   # - [13, 1, DWConv, [128, 1, 1]] #20 (1, 256, 80, 80) -> (1, 128, 80, 80)
   - [[3, 12], 1, Concat, [1]] # 17 (1, 256, 80, 80) 448 (224)
-  - [-1, 1, EMA, [320]]  #18
+  # - [-1, 1, EMA, [320]]  #18
   # - [-1, 1, EMA, [224]] #8 multiscale 3
 
   # - [5, 1, DWConv, [128, 1, 1]] #22 (1, 384, 40, 40) -> (1, 128, 40, 40)
   # - [15, 1, DWConv, [128, 1, 1]] # 23 (1, 512, 40, 40) -> (1, 128, 40, 40)
-  - [[5, 14], 1, Concat, [1]] # 19 (1, 256, 40, 40) (445)
-  - [-1, 1, EMA, [640]] #20
+  - [[5, 14], 1, Concat, [1]] # 18 (1, 256, 40, 40) (445)
+  # - [-1, 1, EMA, [640]] #20
   # - [-1, 1, EMA, [448]] #8 multiscale 3
 
   # - [8, 1, DWConv, [256, 1, 1]] #25 (1, 768, 20, 20) -> (1, 256, 20, 20)
   # - [18, 1, DWConv, [256, 1, 1]] #26 (1, 1024, 20, 20) -> (1, 256, 20, 20)
-  - [[7, 16], 1, Concat, [1]] #21 (1, 512, 20, 20) (896)
-  - [-1, 1, EMA, [1280]]  #22
+  - [[7, 16], 1, Concat, [1]] #19 (1, 512, 20, 20) (896)
+  # - [-1, 1, EMA, [1280]]  #22
   # - [-1, 1, EMA, [304]] #8 multiscale 3
 
 # YOLOv8.0n head
 head:
   # - [-1, 1, nn.Identity, []]
-  # - [-1, 1, nn.Upsample, [None, 2, "nearest"]] #23
-  # - [[-1, 20], 1, Concat, [1]] # 24
-  # - [-1, 3, DWC3k2, [512]] # 25
+  - [-1, 1, nn.Upsample, [None, 2, "nearest"]] #20
+  - [[-1, 18], 1, Concat, [1]] # 21
+  - [-1, 3, DWC3k2, [512]] # 22
 
-  # - [-1, 1, nn.Upsample, [None, 2, "nearest"]] #26
-  # - [[-1, 18], 1, Concat, [1]] # 27
-  # - [-1, 3, DWC3k2, [256]] # 28
+  - [-1, 1, nn.Upsample, [None, 2, "nearest"]] #23
+  - [[-1, 17], 1, Concat, [1]] # 24
+  - [-1, 3, DWC3k2, [256]] # 25
 
-  # - [-1, 1, DepthwiseConvBlock, [256, 3, 2]] #29
-  # - [[-1, 25], 1, Concat, [1]] # 30
-  # - [-1, 3, DWC3k2, [512, True]] # 31
+  - [-1, 1, DepthwiseConvBlock, [256, 3, 2]] #26
+  - [[-1, 22], 1, Concat, [1]] # 27
+  - [-1, 3, DWC3k2, [512, True]] # 28
 
-  # - [-1, 1, DepthwiseConvBlock, [512, 3, 2]] #32
-  # - [[-1, 22], 1, Concat, [1]] # 33
-  # - [-1, 3, DWC3k2, [1024, True]] # 34
+  - [-1, 1, DepthwiseConvBlock, [512, 3, 2]] #29
+  - [[-1, 19], 1, Concat, [1]] # 30
+  - [-1, 3, DWC3k2, [1024, True]] # 31
 
-  - [[22, 20, 18], 1, Detect, [nc]] # 35
+  - [[25, 28, 31], 1, Detect, [nc]] # 32
