--- a/ultralytics/cfg/models/v8/test5.yaml
+++ b/ultralytics/cfg/models/v8/test5.yaml
@@ -15,59 +15,48 @@ backbone:
   # Swin track
   - [0, 1, TorchVision, [768, swin_t, DEFAULT, True, 4, True]] #1
   - [-1, 1, Index, [192 ,4]] #2
-  - [-1, 1, torchvision.ops.Permute, [[0, 3, 1, 2]]] #3 (1, 192, 80, 80) multiscale 1 (96) 
+  - [-1, 1, torchvision.ops.Permute, [[0, 3, 1, 2]]] #3 (1, 192, 80, 80) multiscale 1  
   - [1, 1, Index, [384, 6]] #4
-  - [-1, 1, torchvision.ops.Permute, [[0, 3, 1, 2]]] #5 (1, 384, 40, 40) multiscale 2 (192)
+  - [-1, 1, torchvision.ops.Permute, [[0, 3, 1, 2]]] #5 (1, 384, 40, 40) multiscale 2 
   - [1, 1, Index, [768, 9]] #6 
-  - [-1, 1, torchvision.ops.Permute, [[0, 3, 1, 2]]] #7 (1, 768, 20, 20) (384)
+  - [-1, 1, torchvision.ops.Permute, [[0, 3, 1, 2]]] #7 (1, 768, 20, 20)
 
   # CNN
-  - [0, 1, DWConv, [64, 3, 2]] # (1, 64, 320, 320) 8 (32)
-  - [-1, 1, DWConv, [128, 3, 2]] # (1, 128, 160, 160) 9 (64)
-  - [-1, 3, DWC3k2, [128, True]] # (1, 128, 160, 160) 10 (64))
-  - [-1, 1, DWConv, [256, 3, 2]] # (1, 256, 80, 80) 11 (128))
-  - [-1, 6, DWC3k2, [256, True]] # (1, 256, 80, 80) 12 multiscale 1 (128)
-  - [-1, 1, DWConv, [512, 3, 2]] # (1, 512, 40, 40) 13 (256)
-  - [-1, 6, DWC3k2, [512, True]] # (1, 512, 40, 40) 14 multiscale 2 (256)
-  - [-1, 1, DWConv, [1024, 3, 2]] # (1, 1024, 20, 20) 15 (512)
-  - [-1, 3, DWC3k2, [1024, True]] # (1, 1024, 20, 20) 16 (512)
+  - [0, 1, DWConv, [64, 3, 2]] # 8 (1, 64, 320, 320) - (16)
+  - [-1, 1, DWConv, [128, 3, 2]] # 9 (1, 128, 160, 160) - (32)
+  - [-1, 3, DWC3k2, [128, True]] # 10 (1, 128, 160, 160) - (32)
+  - [-1, 1, DWConv, [256, 3, 2]] # 11 (1, 256, 80, 80) - (64)
+  - [-1, 6, DWC3k2, [256, True]] # 12 (1, 256, 80, 80) - (64) multiscale 1
+  - [-1, 1, DWConv, [512, 3, 2]] # 13 (1, 512, 40, 40) - (128)
+  - [-1, 6, DWC3k2, [512, True]] # 14 (1, 512, 40, 40) - (128) multiscale 2
+  - [-1, 1, DWConv, [1024, 3, 2]] # 15 (1, 1024, 20, 20) - (256)
+  - [-1, 3, DWC3k2, [1024, True]] # 16 (1, 1024, 20, 20) - (256)
 
   # #Concat
-  # - [3, 1, DWConv, [128, 1, 1]] #19 (1, 192, 80, 80) -> (1, 128, 80, 80)
-  # - [13, 1, DWConv, [128, 1, 1]] #20 (1, 256, 80, 80) -> (1, 128, 80, 80)
-  - [[3, 12], 1, Concat, [1]] # 17 (1, 256, 80, 80) 448 (224)
+  - [[3, 12], 1, Concat, [1]] # 17 (1, 448, 80, 80)  (256)
   - [-1, 1, EMA, [256]]  #18
-  # - [-1, 1, EMA, [224]] #8 multiscale 3
-
-  # - [5, 1, DWConv, [128, 1, 1]] #22 (1, 384, 40, 40) -> (1, 128, 40, 40)
-  # - [15, 1, DWConv, [128, 1, 1]] # 23 (1, 512, 40, 40) -> (1, 128, 40, 40)
-  - [[5, 14], 1, Concat, [1]] # 19 (1, 256, 40, 40) (445)
+  
+  - [[5, 14], 1, Concat, [1]] # 19 (1, 896, 40, 40) (512)
   - [-1, 1, EMA, [512]] #20
-  # - [-1, 1, EMA, [448]] #8 multiscale 3
 
-  # - [8, 1, DWConv, [256, 1, 1]] #25 (1, 768, 20, 20) -> (1, 256, 20, 20)
-  # - [18, 1, DWConv, [256, 1, 1]] #26 (1, 1024, 20, 20) -> (1, 256, 20, 20)
-  - [[7, 16], 1, Concat, [1]] #21 (1, 512, 20, 20) (896)
+  - [[7, 16], 1, Concat, [1]] #21 (1, 1792, 20, 20) (1024)
   - [-1, 1, EMA, [1024]]  #22
-  # - [-1, 1, EMA, [304]] #8 multiscale 3
 
-# YOLOv8.0n head
 head:
-  # - [-1, 1, nn.Identity, []]
   - [-1, 1, nn.Upsample, [None, 2, "nearest"]] #23
-  - [[-1, 20], 1, Concat, [1]] # 24
-  - [-1, 3, DWC3k2, [512]] # 25
+  - [[-1, 20], 1, Concat, [1]] # 24 1024+512 = 1536
+  - [-1, 3, C3k2, [512]] # 25 128
 
   - [-1, 1, nn.Upsample, [None, 2, "nearest"]] #26
   - [[-1, 18], 1, Concat, [1]] # 27
-  - [-1, 3, DWC3k2, [256]] # 28
+  - [-1, 3, C3k2, [256]] # 28
 
   - [-1, 1, DepthwiseConvBlock, [256, 3, 2]] #29
   - [[-1, 25], 1, Concat, [1]] # 30
-  - [-1, 3, DWC3k2, [512, True]] # 31
+  - [-1, 3, C3k2, [512, True]] # 31
 
   - [-1, 1, DepthwiseConvBlock, [512, 3, 2]] #32
   - [[-1, 22], 1, Concat, [1]] # 33
-  - [-1, 3, DWC3k2, [1024, True]] # 34
+  - [-1, 3, C3k2, [1024, True]] # 34
 
   - [[34, 31, 28], 1, Detect, [nc]] # 35
