--- a/ultralytics/cfg/models/Test/swin_DWConv_DWC3k2_SPPF_EMA.yaml
+++ b/ultralytics/cfg/models/Test/swin_DWConv_DWC3k2_SPPF_EMA.yaml
@@ -15,13 +15,13 @@ backbone:
   - [-1, 1, SPPF, [768, 5]] #8
 
     # CNN
-  - [-1, 1, DWConv, [64, 3, 2]] # 9 (1, 64, 320, 320) - (16)
+  - [0, 1, DWConv, [64, 3, 2]] # 9 (1, 64, 320, 320) - (16)
   - [-1, 1, DWConv, [128, 3, 2]] # 10 (1, 128, 160, 160) - (32)
   - [-1, 2, DWC3k2, [256, False, 0.25]] # 11 (1, 256, 80, 80) - (64)
-  - [-1, 1, DWConv, [256, 3, 2]] # 12 (1, 256, 80, 80) - (64)
+  - [-1, 1, DWConv, [256, 3, 2]] # 12 (1, 256, 80, 80) - (64) - multiscale 1
   - [-1, 2, DWC3k2, [512, False, 0.25]] #13 (1, 512, 40, 40) - (128)
   - [-1, 1, DWConv, [512, 3, 2]] # 14 (1, 512, 40, 40) - (128)
-  - [-1, 2, DWC3k2, [512, True]] #15 (1, 512, 40, 40) - (128)
+  - [-1, 2, DWC3k2, [512, True]] #15 (1, 512, 40, 40) - (128) - multiscale 2
   - [-1, 1, DWConv, [1024, 3, 2]] # 16 (1, 1024, 20, 20) - (256)
   - [-1, 2, DWC3k2, [1024, True]] #17 (1, 1024, 20, 20) - (256)
   - [-1, 1, SPPF, [1024, 5]] #18
