--- a/ultralytics/cfg/models/Test/swin_Conv_DWConv_EMA.yaml
+++ b/ultralytics/cfg/models/Test/swin_Conv_DWConv_EMA.yaml
@@ -17,15 +17,15 @@ backbone:
   - [0, 1, Conv, [64, 3, 2]] # 8 (1, 64, 320, 320) - (16)
   - [-1, 1, Conv, [128, 3, 2]] # 9 (1, 128, 160, 160) - (32)
   - [-1, 2, DWC3k2, [256, False, 0.25]] #10 (1, 256, 80, 80) - (64)
-  - [-1, 1, Conv, [256, 3, 2]] # 11 (1, 256, 80, 80) - (64)
+  - [-1, 1, Conv, [256, 3, 2]] # 11 (1, 256, 80, 80) - (64) - multiscale 1
   - [-1, 2, DWC3k2, [512, False, 0.25]] #12 (1, 512, 40, 40) - (128)
   - [-1, 1, Conv, [512, 3, 2]] # 13 (1, 512, 40, 40) - (128)
-  - [-1, 2, DWC3k2, [512, True]] #14 (1, 512, 40, 40) - (128)
+  - [-1, 2, DWC3k2, [512, True]] #14 (1, 512, 40, 40) - (128) - multiscale 2
   - [-1, 1, Conv, [1024, 3, 2]] # 15 (1, 1024, 20, 20) - (256)
   - [-1, 2, DWC3k2, [1024, True]] #16 (1, 1024, 20, 20) - (256)
 
   # #Concat
-  - [[3, 12], 1, Concat, [1]] # 17 (1, 448, 80, 80)  (256)
+  - [[3, 11], 1, Concat, [1]] # 17 (1, 448, 80, 80)  (256)
   - [-1, 1, EMA, [256]]  #18
   
   - [[5, 14], 1, Concat, [1]] # 19 (1, 896, 40, 40) (512)
