--- a/ultralytics/cfg/models/Test/swin_DWConv_DWC3k2_SPPF_EMA.yaml
+++ b/ultralytics/cfg/models/Test/swin_DWConv_DWC3k2_SPPF_EMA.yaml
@@ -12,7 +12,7 @@ backbone:
   - [-1, 1, torchvision.ops.Permute, [[0, 3, 1, 2]]] #5 (1, 384, 40, 40) multiscale 2 
   - [1, 1, Index, [768, 9]] #6 
   - [-1, 1, torchvision.ops.Permute, [[0, 3, 1, 2]]] #7 (1, 768, 20, 20)
-  - [-1, 1, SPPF, [768, 5]] #8
+  - [-1, 1, SPPF, [768, 5]] #8 multiscale 3
 
     # CNN
   - [0, 1, DWConv, [64, 3, 2]] # 9 (1, 64, 320, 320) - (16)
@@ -24,16 +24,16 @@ backbone:
   - [-1, 2, DWC3k2, [512, True]] #15 (1, 512, 40, 40) - (128) - multiscale 2
   - [-1, 1, DWConv, [1024, 3, 2]] # 16 (1, 1024, 20, 20) - (256)
   - [-1, 2, DWC3k2, [1024, True]] #17 (1, 1024, 20, 20) - (256)
-  - [-1, 1, SPPF, [1024, 5]] #18
+  - [-1, 1, SPPF, [1024, 5]] #18 multisclae 3
     
   #Concat
   - [[3, 12], 1, Concat, [1]] # 19 (1, 448, 80, 80)  (256)
   - [-1, 1, EMA, [256]]  #20
   
-  - [[5, 14], 1, Concat, [1]] # 21 (1, 896, 40, 40) (512)
+  - [[5, 15], 1, Concat, [1]] # 21 (1, 896, 40, 40) (512)
   - [-1, 1, EMA, [512]] #22
 
-  - [[7, 16], 1, Concat, [1]] #23 (1, 1792, 20, 20) (1024)
+  - [[8, 18], 1, Concat, [1]] #23 (1, 1792, 20, 20) (1024)
   - [-1, 1, EMA, [1024]]  #24
 
 head:
