--- a/ultralytics/cfg/models/Test/swin_Conv_DWC3k2_SPPF_EMA.yaml
+++ b/ultralytics/cfg/models/Test/swin_Conv_DWC3k2_SPPF_EMA.yaml
@@ -45,11 +45,11 @@ head:
   - [[-1, 20], 1, Concat, [1]] # 29
   - [-1, 3, C3k2, [256]] # 30
 
-  - [-1, 1, DepthwiseConvBlock, [256, 3, 2]] #31
+  - [-1, 1, Conv, [256, 3, 2]] #31
   - [[-1, 27], 1, Concat, [1]] # 32
   - [-1, 3, C3k2, [512, True]] # 33
 
-  - [-1, 1, DepthwiseConvBlock, [512, 3, 2]] #34
+  - [-1, 1, Conv, [512, 3, 2]] #34
   - [[-1, 24], 1, Concat, [1]] # 35
   - [-1, 3, C3k2, [1024, True]] # 36
 
