--- a/ultralytics/cfg/models/Test/swin_DWConv_DWC3k2_SPPF_EMA.yaml
+++ b/ultralytics/cfg/models/Test/swin_DWConv_DWC3k2_SPPF_EMA.yaml
@@ -38,19 +38,19 @@ backbone:
 
 head:
   - [-1, 1, nn.Upsample, [None, 2, "nearest"]] #25
-  - [[-1, 20], 1, Concat, [1]] # 26 1024+512 = 1536
+  - [[-1, 22], 1, Concat, [1]] # 26 1024+512 = 1536
   - [-1, 3, C3k2, [512]] # 27 128
 
   - [-1, 1, nn.Upsample, [None, 2, "nearest"]] #28
-  - [[-1, 18], 1, Concat, [1]] # 29
+  - [[-1, 20], 1, Concat, [1]] # 29
   - [-1, 3, C3k2, [256]] # 30
 
-  - [-1, 1, DepthwiseConvBlock, [256, 3, 2]] #31
-  - [[-1, 25], 1, Concat, [1]] # 32
+  - [-1, 1, Conv, [256, 3, 2]] #31
+  - [[-1, 27], 1, Concat, [1]] # 32
   - [-1, 3, C3k2, [512, True]] # 33
 
-  - [-1, 1, DepthwiseConvBlock, [512, 3, 2]] #34
-  - [[-1, 22], 1, Concat, [1]] # 35
+  - [-1, 1, Conv, [512, 3, 2]] #34
+  - [[-1, 24], 1, Concat, [1]] # 35
   - [-1, 3, C3k2, [1024, True]] # 36
 
-  - [[34, 31, 28], 1, Detect, [nc]] # 37
+  - [[36, 33, 30], 1, Detect, [nc]] # 37
