--- a/ultralytics/cfg/models/Test/swin_DWConv_DWc3k2__SPPF.yaml
+++ b/ultralytics/cfg/models/Test/swin_DWConv_DWc3k2__SPPF.yaml
@@ -40,11 +40,11 @@ head:
   - [[-1, 19], 1, Concat, [1]] # 26
   - [-1, 3, C3k2, [256]] # 27
 
-  - [-1, 1, DepthwiseConvBlock, [256, 3, 2]] #28
+  - [-1, 1, Conv, [256, 3, 2]] #28
   - [[-1, 24], 1, Concat, [1]] # 29
   - [-1, 3, C3k2, [512, True]] # 30
 
-  - [-1, 1, DepthwiseConvBlock, [512, 3, 2]] #31
+  - [-1, 1, Conv, [512, 3, 2]] #31
   - [[-1, 21], 1, Concat, [1]] # 32
   - [-1, 3, C3k2, [1024, True]] # 33
 
