--- a/ultralytics/cfg/models/Test/swin_Conv_DWC3k2_SPPF_EMA.yaml
+++ b/ultralytics/cfg/models/Test/swin_Conv_DWC3k2_SPPF_EMA.yaml
@@ -28,13 +28,16 @@ backbone:
     
   #Concat
   - [[3, 12], 1, Concat, [1]] # 19 (1, 448, 80, 80)  (256)
-  - [-1, 1, EMA, [256]]  #20
+  # - [-1, 1, EMA, [256]]  #20
+  - [-1, 1, ECA, []]  #20
   
   - [[5, 15], 1, Concat, [1]] # 21 (1, 896, 40, 40) (512)
-  - [-1, 1, EMA, [512]] #22
+  # - [-1, 1, EMA, [512]] #22
+  - [-1, 1, ECA, []] #22
 
   - [[8, 18], 1, Concat, [1]] #23 (1, 1792, 20, 20) (1024)
-  - [-1, 1, EMA, [448]]  #24
+  # - [-1, 1, EMA, [448]]  #24
+  - [-1, 1, ECA, []]  #24
 
 head:
   - [-1, 1, nn.Upsample, [None, 2, "nearest"]] #25
