--- a/ultralytics/cfg/models/Test/swin_Conv_DWC3k2_SPPF_EMA.yaml
+++ b/ultralytics/cfg/models/Test/swin_Conv_DWC3k2_SPPF_EMA.yaml
@@ -21,23 +21,20 @@ backbone:
   - [-1, 1, Conv, [256, 3, 2]] # 12 (1, 256, 80, 80) - (64) - multiscale 1
   - [-1, 2, DWC3k2, [512, False, 0.25]] #13 (1, 512, 40, 40) - (128)
   - [-1, 1, Conv, [512, 3, 2]] # 14 (1, 512, 40, 40) - (128)
-  - [-1, 2, DWC3k2, [512, True]] #15 (1, 512, 40, 40) - (128) - multiscale 2
+  - [-1, 2, DWC3k2_Attn, [512, True]] #15 (1, 512, 40, 40) - (128) - multiscale 2
   - [-1, 1, Conv, [1024, 3, 2]] # 16 (1, 1024, 20, 20) - (256)
-  - [-1, 2, DWC3k2, [1024, True]] #17 (1, 1024, 20, 20) - (256)
+  - [-1, 2, DWC3k2_Attn, [1024, True]] #17 (1, 1024, 20, 20) - (256)
   - [-1, 1, SPPF, [1024, 5]] #18 multisclae 3
     
   #Concat
   - [[3, 12], 1, Concat, [1]] # 19 (1, 448, 80, 80)  (256)
-  # - [-1, 1, EMA, [256]]  #20
-  - [-1, 1, ECA, []]  #20
+  - [-1, 1, EMA, [256]]  #20
   
   - [[5, 15], 1, Concat, [1]] # 21 (1, 896, 40, 40) (512)
-  # - [-1, 1, EMA, [512]] #22
-  - [-1, 1, ECA, []] #22
+  - [-1, 1, EMA, [512]] #22
 
   - [[8, 18], 1, Concat, [1]] #23 (1, 1792, 20, 20) (1024)
-  # - [-1, 1, EMA, [448]]  #24
-  - [-1, 1, ECA, []]  #24
+  - [-1, 1, EMA, [448]]  #24
 
 head:
   - [-1, 1, nn.Upsample, [None, 2, "nearest"]] #25
