--- a/ultralytics/cfg/models/Test/swin_conv_Dwc3k2_SPPF_EMA_BiFPN.yaml
+++ b/ultralytics/cfg/models/Test/swin_conv_Dwc3k2_SPPF_EMA_BiFPN.yaml
@@ -28,15 +28,16 @@ backbone:
     
   #Concat
   - [[3, 12], 1, Concat, [1]] # 19 (1, 448, 80, 80)  (256)
-  - [-1, 1, EMA, [256]]  #20
+  - [-1, 1, EMA, [256]]  #20 
   
   - [[5, 15], 1, Concat, [1]] # 21 (1, 896, 40, 40) (512)
-  - [-1, 1, EMA, [512]] #22
+  - [-1, 1, EMA, [512]] #22 
 
   - [[8, 18], 1, Concat, [1]] #23 (1, 1792, 20, 20) (1024)
-  - [-1, 1, EMA, [448]]  #24
+  - [-1, 1, EMA, [448]]  #24 
 
 head:
+#BiFPN BLOCK 1
   - [-1, 1, nn.Upsample, [None, 2, "nearest"]] #25
   - [[-1, 22], 1, BiFPN_Concat2, [1]] # 26 1024+512 = 1536
   - [-1, 3, C3k2, [512]] # 27 128
@@ -46,11 +47,12 @@ head:
   - [-1, 3, C3k2, [256]] # 30
 
   - [-1, 1, Conv, [256, 3, 2]] #31
-  - [[-1, 27], 1, BiFPN_Concat2, [1]] # 32
+  - [[-1, 27, 22], 1, BiFPN_Concat3, [1]] # 32
   - [-1, 3, C3k2, [512, True]] # 33
 
   - [-1, 1, Conv, [512, 3, 2]] #34
   - [[-1, 24], 1, BiFPN_Concat2, [1]] # 35
   - [-1, 3, C3k2, [1024, True]] # 36
+#
 
   - [[36, 33, 30], 1, Detect, [nc]] # 37
