--- a/ultralytics/cfg/models/Test/swin_conv_Dwc3k2_SPPF_EMA_BiFPN.yaml
+++ b/ultralytics/cfg/models/Test/swin_conv_Dwc3k2_SPPF_EMA_BiFPN.yaml
@@ -40,19 +40,19 @@ head:
 #BiFPN BLOCK 1
   - [-1, 1, nn.Upsample, [None, 2, "nearest"]] #25
   - [[-1, 22], 1, BiFPN_Concat2, [1]] # 26 1024+512 = 1536
-  - [-1, 3, C3k2, [512]] # 27 128
+  - [-1, 3, DWC3k2, [512]] # 27 128
 
   - [-1, 1, nn.Upsample, [None, 2, "nearest"]] #28
   - [[-1, 20], 1, BiFPN_Concat2, [1]] # 29
-  - [-1, 3, C3k2, [256]] # 30
+  - [-1, 3, DWC3k2, [256]] # 30
 
   - [-1, 1, Conv, [256, 3, 2]] #31
   - [[-1, 27, 22], 1, BiFPN_Concat3, [1]] # 32
-  - [-1, 3, C3k2, [512, True]] # 33
+  - [-1, 3, DWC3k2, [512, True]] # 33
 
   - [-1, 1, Conv, [512, 3, 2]] #34
   - [[-1, 24], 1, BiFPN_Concat2, [1]] # 35
-  - [-1, 3, C3k2, [1024, True]] # 36
+  - [-1, 3, DWC3k2, [1024, True]] # 36
 #
 
   - [[36, 33, 30], 1, Detect, [nc]] # 37
