--- a/ultralytics/cfg/models/Test/swin_conv_Dwc3k2_SPPF_EMA_BiFPN.yaml
+++ b/ultralytics/cfg/models/Test/swin_conv_Dwc3k2_SPPF_EMA_BiFPN.yaml
@@ -53,6 +53,39 @@ head:
   - [-1, 1, Conv, [512, 3, 2]] #34
   - [[-1, 24], 1, BiFPN_Concat2, [1]] # 35
   - [-1, 3, DWC3k2, [1024, True]] # 36
-#
 
-  - [[36, 33, 30], 1, Detect, [nc]] # 37
+#BiFPN Block 2
+  - [-1, 1, nn.Upsample, [None, 2, "nearest"]] #37
+  - [[-1, 33], 1, BiFPN_Concat2, [1]] # 38
+  - [-1, 3, DWC3k2, [512]] # 39
+
+  - [-1, 1, nn.Upsample, [None, 2, "nearest"]] #40
+  - [[-1, 30], 1, BiFPN_Concat2, [1]] # 41
+  - [-1, 3, DWC3k2, [256]] # 42
+
+  - [-1, 1, Conv, [256, 3, 2]] #43
+  - [[-1, 39, 33], 1, BiFPN_Concat3, [1]] # 44
+  - [-1, 3, DWC3k2, [512, True]] # 45
+
+  - [-1, 1, Conv, [512, 3, 2]] #46
+  - [[-1, 36], 1, BiFPN_Concat2, [1]] # 47
+  - [-1, 3, DWC3k2, [1024, True]] # 48
+
+#BiFPN BLock 3
+  - [-1, 1, nn.Upsample, [None, 2, "nearest"]] #49
+  - [[-1, 45], 1, BiFPN_Concat2, [1]] # 50
+  - [-1, 3, DWC3k2, [512]] # 51
+
+  - [-1, 1, nn.Upsample, [None, 2, "nearest"]] #52
+  - [[-1, 42], 1, BiFPN_Concat2, [1]] # 53
+  - [-1, 3, DWC3k2, [256]] # 54
+
+  - [-1, 1, Conv, [256, 3, 2]] #55
+  - [[-1, 51, 45], 1, BiFPN_Concat3, [1]] # 56
+  - [-1, 3, DWC3k2, [512, True]] # 57
+
+  - [-1, 1, Conv, [512, 3, 2]] #58
+  - [[-1, 48], 1, BiFPN_Concat2, [1]] # 59
+  - [-1, 3, DWC3k2, [1024, True]] # 60
+
+  - [[60, 57, 54], 1, Detect, [nc]] # 61
