--- a/ultralytics/cfg/models/Test/dwc3k2_attn_SPPF_ECA.yaml
+++ b/ultralytics/cfg/models/Test/dwc3k2_attn_SPPF_ECA.yaml
@@ -18,9 +18,9 @@ backbone:
     # CNN
   - [0, 1, Conv, [64, 3, 2]] # 9 (1, 64, 320, 320) - (16)
   - [-1, 1, Conv, [128, 3, 2]] # 10 (1, 128, 160, 160) - (32)
-  - [-1, 2, DWC3k2_Attn, [256, False, 0.25]] # 11 (1, 256, 80, 80) - (64)
+  - [-1, 2, DWC3k2, [256, False, 0.25]] # 11 (1, 256, 80, 80) - (64)
   - [-1, 1, Conv, [256, 3, 2]] # 12 (1, 256, 80, 80) - (64) - multiscale 1
-  - [-1, 2, DWC3k2_Attn, [512, False, 0.25]] #13 (1, 512, 40, 40) - (128)
+  - [-1, 2, DWC3k2, [512, False, 0.25]] #13 (1, 512, 40, 40) - (128)
   - [-1, 1, Conv, [512, 3, 2]] # 14 (1, 512, 40, 40) - (128)
   - [-1, 2, DWC3k2_Attn, [512, True]] #15 (1, 512, 40, 40) - (128) - multiscale 2
   - [-1, 1, Conv, [1024, 3, 2]] # 16 (1, 1024, 20, 20) - (256)
