--- a/ultralytics/cfg/models/Test/swin_conv_Dwc3k2_SPPF_ECA_BiFPN.yaml
+++ b/ultralytics/cfg/models/Test/swin_conv_Dwc3k2_SPPF_ECA_BiFPN.yaml
@@ -46,11 +46,11 @@ head:
   - [[-1, 20], 1, BiFPN_Concat2, [1]] # 29
   - [-1, 3, DWC3k2, [256]] # 30
 
-  - [-1, 1, Conv, [256, 3, 2]] #31
+  - [-1, 1, nn.Upsample, [None, 2, "nearest"]] #31
   - [[-1, 27, 22], 1, BiFPN_Concat3, [1]] # 32
   - [-1, 3, DWC3k2, [512, True]] # 33
 
-  - [-1, 1, Conv, [512, 3, 2]] #34
+  - [-1, 1, nn.Upsample, [None, 2, "nearest"]] #34
   - [[-1, 24], 1, BiFPN_Concat2, [1]] # 35
   - [-1, 3, DWC3k2, [1024, True]] # 36
 
@@ -63,11 +63,11 @@ head:
   - [[-1, 30], 1, BiFPN_Concat2, [1]] # 41
   - [-1, 3, DWC3k2, [256]] # 42
 
-  - [-1, 1, Conv, [256, 3, 2]] #43
+  - [-1, 1, nn.Upsample, [None, 2, "nearest"]] #43
   - [[-1, 39, 33], 1, BiFPN_Concat3, [1]] # 44
   - [-1, 3, DWC3k2, [512, True]] # 45
 
-  - [-1, 1, Conv, [512, 3, 2]] #46
+  - [-1, 1, nn.Upsample, [None, 2, "nearest"]] #46
   - [[-1, 36], 1, BiFPN_Concat2, [1]] # 47
   - [-1, 3, DWC3k2, [1024, True]] # 48
 
@@ -80,11 +80,11 @@ head:
   - [[-1, 42], 1, BiFPN_Concat2, [1]] # 53
   - [-1, 3, DWC3k2, [256]] # 54
 
-  - [-1, 1, Conv, [256, 3, 2]] #55
+  - [-1, 1, nn.Upsample, [None, 2, "nearest"]] #55
   - [[-1, 51, 45], 1, BiFPN_Concat3, [1]] # 56
   - [-1, 3, DWC3k2, [512, True]] # 57
 
-  - [-1, 1, Conv, [512, 3, 2]] #58
+  - [-1, 1, nn.Upsample, [None, 0.5, "nearest"]] #58
   - [[-1, 48], 1, BiFPN_Concat2, [1]] # 59
   - [-1, 3, DWC3k2, [1024, True]] # 60
 
