--- a/ultralytics/cfg/models/Test/swin_conv_DWC3k2_SPPF_ECA_BiFPN2.yaml
+++ b/ultralytics/cfg/models/Test/swin_conv_DWC3k2_SPPF_ECA_BiFPN2.yaml
@@ -1,6 +1,6 @@
 nc: 2
 scales:
-  s: [0.33, 0.5, 1024] 
+  s: [0.33, 0.25, 1024] 
   
 backbone:
   - [-1, 1, nn.Identity, []] #0  
@@ -39,11 +39,11 @@ backbone:
 head:
 #BiFPN BLOCK 1
   - [-1, 1, nn.Upsample, [None, 2, "nearest"]] #25
-  - [[-1, 22], 1, BiFPN_Concat2, [1]] # 26 1024+512 = 1536
+  - [[-1, 22], 1, Concat, [1]] # 26 1024+512 = 1536
   - [-1, 3, DWC3k2, [512]] # 27 128
 
   - [-1, 1, nn.Upsample, [None, 2, "nearest"]] #28
-  - [[-1, 20], 1, BiFPN_Concat2, [1]] # 29
+  - [[-1, 20], 1, Concat, [1]] # 29
   - [-1, 3, DWC3k2, [256]] # 30
 
   - [-1, 1, nn.Upsample, [None, 0.5, "nearest"]] #31
@@ -51,16 +51,16 @@ head:
   - [-1, 3, DWC3k2, [512, True]] # 33
 
   - [-1, 1, nn.Upsample, [None, 0.5, "nearest"]] #34
-  - [[-1, 24], 1, BiFPN_Concat2, [1]] # 35
+  - [[-1, 24], 1, Concat, [1]] # 35
   - [-1, 3, DWC3k2, [1024, True]] # 36
 
 #BiFPN Block 2
   - [-1, 1, nn.Upsample, [None, 2, "nearest"]] #37
-  - [[-1, 33], 1, BiFPN_Concat2, [1]] # 38
+  - [[-1, 33], 1, Concat, [1]] # 38
   - [-1, 3, DWC3k2, [512]] # 39
 
   - [-1, 1, nn.Upsample, [None, 2, "nearest"]] #40
-  - [[-1, 30], 1, BiFPN_Concat2, [1]] # 41
+  - [[-1, 30], 1, Concat, [1]] # 41
   - [-1, 3, DWC3k2, [256]] # 42
 
   - [-1, 1, nn.Upsample, [None, 0.5, "nearest"]] #43
@@ -68,16 +68,16 @@ head:
   - [-1, 3, DWC3k2, [512, True]] # 45
 
   - [-1, 1, nn.Upsample, [None, 0.5, "nearest"]] #46
-  - [[-1, 36], 1, BiFPN_Concat2, [1]] # 47
+  - [[-1, 36], 1, Concat, [1]] # 47
   - [-1, 3, DWC3k2, [1024, True]] # 48
 
 #BiFPN BLock 3
   - [-1, 1, nn.Upsample, [None, 2, "nearest"]] #49
-  - [[-1, 45], 1, BiFPN_Concat2, [1]] # 50
+  - [[-1, 45], 1, Concat, [1]] # 50
   - [-1, 3, DWC3k2, [512]] # 51
 
   - [-1, 1, nn.Upsample, [None, 2, "nearest"]] #52
-  - [[-1, 42], 1, BiFPN_Concat2, [1]] # 53
+  - [[-1, 42], 1, Concat, [1]] # 53
   - [-1, 3, DWC3k2, [256]] # 54
 
   - [-1, 1, nn.Upsample, [None, 0.5, "nearest"]] #55
@@ -85,7 +85,7 @@ head:
   - [-1, 3, DWC3k2, [512, True]] # 57
 
   - [-1, 1, nn.Upsample, [None, 0.5, "nearest"]] #58
-  - [[-1, 48], 1, BiFPN_Concat2, [1]] # 59
+  - [[-1, 48], 1, Concat, [1]] # 59
   - [-1, 3, DWC3k2, [1024, True]] # 60
 
   - [[60, 57, 54], 1, Detect, [nc]] # 61
