--- a/ultralytics/cfg/models/Test/conv_DWC3k2.yaml
+++ b/ultralytics/cfg/models/Test/conv_DWC3k2.yaml
@@ -25,11 +25,11 @@ head:
   - [[-1, 4], 1, Concat, [1]] # 15
   - [-1, 3, C3k2, [256]] # 16
 
-  - [-1, 1, Conv, [256, 3, 2]] #17
+  - [-1, 1, nn.Upsample, [None, 0.5, "nearest"]] #17
   - [[-1, 13], 1, Concat, [1]] #18
   - [-1, 3, C3k2, [512, True]] #19
 
-  - [-1, 1, Conv, [512, 3, 2]] #20
+  - [-1, 1, nn.Upsample, [None, 0.5, "nearest"]] #20
   - [[-1, 10], 1, Concat, [1]] # 21
   - [-1, 3, C3k2, [1024, True]] # 22
 
