--- a/ultralytics/cfg/models/Test/swin_conv_DWC3k2_SPPF_ECA_BiFPN2.yaml
+++ b/ultralytics/cfg/models/Test/swin_conv_DWC3k2_SPPF_ECA_BiFPN2.yaml
@@ -5,7 +5,7 @@ scales:
 backbone:
   - [-1, 1, nn.Identity, []] #0  
   # Swin track
-  - [0, 1, TorchVision, [768, swin_v2_s, DEFAULT, True, 4, True]] #1
+  - [0, 1, TorchVision, [768, swin_s, DEFAULT, True, 4, True]] #1
   - [-1, 1, Index, [192 ,4]] #2
   - [-1, 1, torchvision.ops.Permute, [[0, 3, 1, 2]]] #3 (1, 192, 80, 80) multiscale 1  
   - [1, 1, Index, [384, 6]] #4
