--- a/ultralytics/cfg/models/Test/swin_dwc3k2_eca_bifpn_eca_head.yaml
+++ b/ultralytics/cfg/models/Test/swin_dwc3k2_eca_bifpn_eca_head.yaml
@@ -89,8 +89,8 @@ head:
   - [-1, 3, DWC3k2, [1024, True]] # 60
 
   - [54, 1, ECA, []] #61
-  - [57, 1, ECA, []] #62
-  - [60, 1, ECA, []] #63
+  # - [57, 1, ECA, []] #62
+  # - [60, 1, ECA, []] #63
 
   # - [[54, 57, 60], 1, Detect, [nc]] # 61
-  - [[61, 62, 63], 1, Detect, [nc]] # 61
+  - [[54, 57, 61], 1, Detect, [nc]] # 61
