--- a/ultralytics/cfg/models/v8/yolo_ViT.yaml
+++ b/ultralytics/cfg/models/v8/yolo_ViT.yaml
@@ -4,8 +4,11 @@ scale:
 backbone:
   - [-1, 1, TorchVision, [256, "alexnet", "DEFAULT", True, 2, True]] #0
   - [0, 1, Index, [192, 5]] #192, 79, 79 #1
-  - [0, 1, Index, [384, 8]] #384, 39, 39 #2
-  - [0, 1, Index, [364, 8]] #256, 19, 19  #3    
+  - [-1, 1, Conv, [192, 3, 1, 1]] #2
+  - [0, 1, Index, [384, 8]] #384, 39, 39 #3
+  - [-1, 1, Conv, [192, 3, 1, 1]] #4
+  - [0, 1, Index, [364, 8]] #256, 19, 19  #5
+  - [-1, 1, Conv, [192, 3, 1, 1]] #6
 
 head:
-  - [[1, 2, 3], 1, Detect, [nc]] 
+  - [[2, 4, 6], 1, Detect, [nc]] 
