--- a/ultralytics/cfg/datasets/indoor_fire_smoke.yaml
+++ b/ultralytics/cfg/datasets/indoor_fire_smoke.yaml
@@ -1,5 +1,5 @@
-path: /kaggle/input/indoor-fire-and-smoke-remapped/Indoor Fire Smoke.v2-v1.yolov11 #root dir
-#path: /kaggle/working/data #root dir
+# path: /kaggle/input/indoor-fire-and-smoke-remapped/Indoor Fire Smoke.v2-v1.yolov11 #root dir
+path : /kaggle/input/indoor-fire-and-smoke-v1-remapped/Indoor Fire Smoke.v1-original.yolov11
 train: train/images
 val: valid/images
 test: test/images
